# raspberrypi_ai_camera_ros2

./: README.md  package.xml  setup.cfg  setup.py
launch/: object_detection_launch.py
raspberrypi_ai_camera_ros2/: object_detection_node.py
